print threadlocal and stack trace for debug
Signed-off-by: Uday Bhaskar J <udabhas@amazon.com>